--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/marked": "^5.0.2",
+    "gh-pages": "^6.3.0",
     "lit": "^3.2.1",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.2"
