add deploy script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "webpack",
     "start": "webpack serve --open",
     "type-check": "tsc --noEmit",
-    "type-check:watch": "tsc --noEmit --watch"
+    "type-check:watch": "tsc --noEmit --watch",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
