--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "inlineSources": true,
-    "outDir": "./dist",
+    "outDir": "./docs",
     "rootDir": "./src",
     "strict": true,
     "noUnusedLocals": true,
